--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -6,3 +6,6 @@ opentelemetry-exporter-otlp-proto-http
 opentelemetry-instrumentation-flask 
 opentelemetry-instrumentation-requests
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
+
+
+aws-xray-sdk
