--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,6 +22,7 @@ vscode:
   extensions:
     - 42Crunch.vscode-openapi
     - cweijan.vscode-postgresql-client2
+    - ms-azuretools.vscode-docker
 
 
 ports:
