--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -8,6 +8,10 @@ opentelemetry-instrumentation-requests
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
 
 
-aws-xray-sdk
+#aws-xray-sdk
 
 watchtower
+
+#rollbar
+#blinker
+#rollbar
