implement database and create table

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,6 +22,7 @@ vscode:
   extensions:
     - 42Crunch.vscode-openapi
     - cweijan.vscode-postgresql-client2
+    - ckolkman.vscode-postgres
     - ms-azuretools.vscode-docker
 
 
