--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,11 @@ services:
       # OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
       # AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
       # AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
-      # AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
-      # AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-      # AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_DEFAULT_REGION: "us-east-1"
+      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+      AWS_COGNITO_USER_POOL_ID: "us-east-1_JtCLJk9pn"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "oq199bt1i98d8fm471d8i32u4"
     build: ./backend-flask
     ports:
       - "4567:4567"
