--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -13,3 +13,4 @@ EXPOSE ${PORT}
 CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
 
 # python3 -m flask run --host=0.0.0.0 --port=4567
+# pip install -r requirements.txt --user
