--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+__pycache__/
+/backend-flask/bin/db/
+/scripts-personal/*.sh
+/env
