--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,11 @@ version: "3.8"
 services:
   backend-flask:
     environment:
+      AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
       CONNECTION_URL: "postgresql://postgres:ada@db:5432/cruddur"
       PROD_CONNECTION_URL: "postgresql://root:huEE33z2Qvl383@cruddur-db-instance.cih7lwdwwpfd.us-east-1.rds.amazonaws.com:5432/cruddur"
-      # FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-      # BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       FRONTEND_URL: "http://localhost:3000"
       BACKEND_URL: "http://localhost:4567"
-      # OTEL_SERVICE_NAME: 'backend-flask'
-      # OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io"
-      # OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
-      # AWS_XRAY_URL: "*4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}*"
-      # AWS_XRAY_DAEMON_ADDRESS: "xray-daemon:2000"
       AWS_DEFAULT_REGION: "us-east-1"
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
@@ -25,7 +19,6 @@ services:
       - ./backend-flask:/backend-flask
   frontend-react-js:
     environment:
-      # REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_BACKEND_URL: "http://localhost:4567"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
