--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   backend-flask:
     environment:
-      AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
+      # AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
       CONNECTION_URL: "postgresql://postgres:ada@db:5432/cruddur"
       PROD_CONNECTION_URL: "postgresql://root:huEE33z2Qvl383@cruddur-db-instance.cih7lwdwwpfd.us-east-1.rds.amazonaws.com:5432/cruddur"
       FRONTEND_URL: "http://localhost:3000"
