--- a/frontend-react-js/Dockerfile.prod
+++ b/frontend-react-js/Dockerfile.prod
@@ -1,5 +1,5 @@
-# Base Image ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-FROM node:16.18 AS build
+# Base Image
+FROM 023175542133.dkr.ecr.us-east-1.amazonaws.com/cruddur-react-js:latest AS build
 
 ARG REACT_APP_BACKEND_URL
 ARG REACT_APP_AWS_PROJECT_REGION
@@ -24,5 +24,3 @@ FROM nginx:1.23.3-alpine
 # --from build is coming from the Base Image
 COPY --from=build /frontend-react-js/build /usr/share/nginx/html
 COPY --from=build /frontend-react-js/nginx.conf /etc/nginx/nginx.conf
-
-EXPOSE 3000
