--- a/bin/frontend/build
+++ b/bin/frontend/build
@@ -7,11 +7,11 @@ PROJECT_PATH=$(dirname $BIN_PATH)
 FRONTEND_REACT_JS_PATH="$PROJECT_PATH/frontend-react-js"
 
 docker build \
---build-arg REACT_APP_BACKEND_URL="https://api.cruddur.com" \
+--build-arg REACT_APP_BACKEND_URL="http://localhost:4567" \
 --build-arg REACT_APP_AWS_PROJECT_REGION="$AWS_DEFAULT_REGION" \
 --build-arg REACT_APP_AWS_COGNITO_REGION="$AWS_DEFAULT_REGION" \
 --build-arg REACT_APP_AWS_USER_POOLS_ID="us-east-1_ivaiOF1U4c" \
---build-arg REACT_APP_CLIENT_ID="55n59iln4a8pra9nnr0r2qe74qd" \
+--build-arg REACT_APP_CLIENT_ID="5n59iln4a8pra9nnr0r2qe74qd" \
 -t frontend-react-js \
 -f "$FRONTEND_REACT_JS_PATH/Dockerfile.prod" \
 "$FRONTEND_REACT_JS_PATH/."
